--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.0",
+    "tailwindcss": "^3.4.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.6"
   }
 }
